** March
*** 12
**** =15:46= tried writing a HideCategoriesInLinksInCurrentView command to automate toggling visibility of categories in links
it appears to not be exposed to API: https://forums.autodesk.com/t5/revit-api-forum/change-revit-link-display-settings-and-design-options-using-api/td-p/6322135
*** 13
**** =22:21= tried writing a ChangeIFCLinksPath to change paths of links in a single command, but didn't manage to get it to work
https://chatgpt.com/c/67d355b1-41a8-800c-8195-e720852093e3
a few api calls were wrong, still worth revisiting later as this issue likely will come up again
independently discovered that this information may not be stored in revit database, but in a separate file/stream TransmissinoData in .rvt file formatted as a plain text xml
suggesting that perhaps this change could be made directly in .rvt file without opening revit
** April
*** 03
**** =11:22= couldn't get ShowGeogrpahicData command to work
jeremy tammik [[https://thebuildingcoder.typepad.com/blog/2012/11/survey-and-project-base-point.html][reported]] that shared coordaintes / shared site information isn't available to revit api
couldn't find any coordinate values when parsing .rvt file directly
*** 04
**** =17:00= couldn't get DirectContext3D API to work to show even anything on screen
further research is needed
** May
*** 11
**** =22:55= very disappointingly [[revit link display settings are not available via api][https://forums.autodesk.com/t5/revit-ideas/api-for-rvt-link-display-settings/idc-p/13624379]]
this makes working with revit links very difficult
for example changing "by linked view" setting across floors
*** 16
**** =09:47= still can't get DrawRevisionCloudAroundSelectedElements to work
can't understand why transformation from "view-space" to "sheet-space" doesn't work